<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="310dp"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/darkGrey">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/add_new_playlist"
        android:textColor="@color/secondaryColor"
        android:layout_centerHorizontal="true"
        android:textSize="18dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        />

    <EditText
        android:id="@+id/new_playlist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        app:backgroundTint="@color/secondaryColor" />

    <Button
        android:id="@+id/close_adding_new_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_playlist_name"
        android:background="@android:color/transparent"
        android:text="@string/close"
        android:textColor="@color/secondaryColor"
        android:layout_marginStart="3dp"
        />

    <Button
        android:id="@+id/save_new_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_playlist_name"
        android:layout_toEndOf="@+id/close_adding_new_playlist"
        android:background="@android:color/transparent"
        android:text="@string/save"
        android:textColor="@color/secondaryColor"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="7dp"/>


</RelativeLayout>